[GLT-3910] added project advanced search